fix(css): bump version to 0.0.9 and adjust z-index variables in tailwind4.css and token.css

--- a/packages/css/token.css
+++ b/packages/css/token.css
@@ -155,8 +155,8 @@
   --z-index-behind: -1;
   --z-index-base: 0;
   --z-index-above: 1;
+  --z-index-header: 50;
   --z-index-overlay: 100;
-  --z-index-header: 150;
   --z-index-modal: 200;
   --z-index-modal-content: 250;
   --color-background-white: var(--color-palette-gray-0);
